[tool.poetry]
name = "simplepythonlambda"
version = "0.1.0"
description = "Simple python lambda"
authors = ["David Pretty <david@launchlab.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-lambda-powertools = "^1.17.0"
boto3 = "^1.17.84"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
